--- a/css/media.css
+++ b/css/media.css
@@ -325,156 +325,267 @@
     .main_banner {
         background-image: url("../images/Rectangle52.jpg");
     }
-    .container{
+
+    .container {
         max-width: 690px;
     }
+    .nav-but-wrap{
+        display: inline-block;
+    }
+
+    header ul{
+        display: none;
+    }
+    header p{
+        font-size: 14px;
+        line-height: 18px;
+    }
+
     header {
         padding-top: 28px;
     }
-    .position{
+
+    .position {
         top: 307px;
     }
-    .position p{
+
+    .position p {
         margin-bottom: 78px;
     }
-    .flex_btn{
+
+    .flex_btn {
         display: flex;
         flex-direction: column;
     }
-    .position .btn{
+
+    .position .btn {
         max-width: 212px;
         margin-right: 0;
         margin-bottom: 42px;
         box-sizing: border-box;
         padding-right: 46px;
     }
-    .btn i{
+
+    .btn i {
         display: none;
     }
-    .title{
+
+    .title {
         margin-top: 100px;
     }
-    .description{
+
+    .description {
         width: 70%;
         margin-left: 0;
         margin-top: 30px;
     }
-    .brand_identity_banner{
+
+    .brand_identity_banner {
         width: 70%;
     }
 
-    .container_2{
+    .container_2 {
         max-width: 642px;
     }
-    .list{
+
+    .list {
         flex-wrap: wrap;
+        justify-content: space-around;
     }
-    .list span{
+
+    .list span {
         margin-top: 42px;
     }
+
     .list p {
         margin-top: 42px;
-        max-width: 122px;
+        max-width: 140px;
     }
-    .list .set{
+
+    .list .set {
         margin-top: 14px;
 
     }
-    .container_3{
+
+    .container_3 {
         max-width: 700px;
     }
-    .d_flex_2{
+
+    .d_flex_2 {
         flex-wrap: wrap;
     }
-    .desc_block{
+
+    .desc_block {
         width: 100%;
     }
-    .description_2{
+
+    .description_2 {
         width: 80%;
         padding-top: 0;
         margin-right: 0;
         margin-top: 25px;
     }
-    .project_amp{
+
+    .project_amp {
         margin-top: 100px;
     }
+
     .d_flex_project a {
         margin-top: 25px;
     }
+
     .d_flex_project h3 {
         margin: 30px 70px 10px 0;
     }
-    .d_flex_guideline{
+
+    .d_flex_guideline {
         flex-wrap: wrap;
     }
-    .d_flex_guideline.project_banner{
+
+    .d_flex_guideline.project_banner {
         width: 60%;
     }
-    .guideline_banner{
+
+    .guideline_banner {
         width: 60%;
     }
+
     .about_guideline {
         width: 65%;
     }
-    .guideline_banner_1{
+
+    .guideline_banner_1 {
         display: none;
     }
-    .guideline_banner_2{
+
+    .guideline_banner_2 {
         display: block;
     }
-    .about_guideline{
+
+    .about_guideline {
         margin-top: 15px;
     }
-    #first_name{
+
+    #first_name {
         margin-right: 0;
         margin-bottom: 20px;
     }
-    .item_1{
-       margin-right: 480px;
-       margin-bottom: 18px;
+
+    .item_1 {
+        margin-right: 480px;
+        margin-bottom: 18px;
     }
-    .flex_block{
+
+    .flex_block {
         flex-wrap: wrap;
     }
-    .block_1{
+
+    .block_1 {
         width: 100%;
         margin: 0;
         padding-top: 1px;
         padding-bottom: 1px;
     }
+
     .block_1_1 {
         display: none;
     }
-    .block_2{
-       width: 28%;
-    }
-    .block_3{
-        width: 28%;
-    }
-    .block_4{
+
+    .block_2 {
         width: 28%;
     }
 
+    .block_3 {
+        width: 28%;
+    }
 
+    .block_4 {
+        width: 28%;
+    }
 
-
-
-
-
-
-
-
-
-
-
-
+    .minor_banner {
+        padding-top: 32px;
+        padding-bottom: 21px;
+        height: auto;
+    }
+    .d_flex_contact{
+        flex-wrap: wrap;
+    }
+    footer button{
+        margin-bottom: 0;
+    }
+    .contact{
+        margin-left: 0;
+        margin-top: 60px;
+    }
+    .headline_2{
+        margin-top: 105px;
+    }
+    .media{
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+    .media div {
+        width: 40%;
+        margin-right: 20px;
+        margin-bottom: 30px;
+    }
+    .first_name_phone_2 {
+        padding: 18px 196px 20px 21px;
+    }
 
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 576px) {
     .container{
         max-width: 510px;
     }
+
+    header p{
+        font-size: 12px;
+        line-height: 15px;
+    }
+    .position{
+        top: 148px;
+    }
+    .position h1{
+        font-size: 30px;
+        line-height: 33px;
+    }
+    .position p{
+        font-size: 20px;
+        line-height: 22px;
+    }
+    .position .btn{
+        font-size: 15px;
+        line-height: 21px;
+    }
+
 
     .description{
         width: 80%;
@@ -541,7 +652,7 @@
         line-height: 35px;
     }
     .first_name_phone{
-        max-width: 380px;
+        width: 380px;
         padding: 21px 215px 18px 21px;
         font-size: 15px;
         line-height: 21px;
@@ -569,6 +680,27 @@
     .flex_block{
         display: none;
     }
+    .minor_banner{
+        display: none;
+    }
+    .media{
+        justify-content: space-between;
+        align-items: stretch;
+        margin: auto;
+    }
+    .media div {
+        width: 50%;
+        margin-right: 0;
+        font-size: 15px;
+        line-height: 21px;
+    }
+    .first_name_phone_2 {
+        padding: 21px 215px 18px 21px;
+        max-width: 450px;
+    }
+    .nav__list-item {
+        font-size: 35px;
+    }
 
 
 
@@ -579,40 +711,63 @@
 }
 
 @media only screen and (max-width: 360px) {
-    .container{
+    .container {
         max-width: 290px;
     }
-    .description{
+    header p{
+        line-height: 13px;
+    }
+    .position{
+        top: 145px;
+    }
+    .position .btn{
+        margin-bottom: 20px;
+    }
+
+
+    .description {
         width: 100%;
     }
+
     .list span {
         margin-right: 58px;
     }
+
     .d_flex_project {
         flex-direction: column;
     }
+
     .d_flex_project p {
         margin-bottom: 0;
     }
+
     .d_flex_project a {
         margin-bottom: 60px;
     }
+
     .about_guideline {
         width: 100%;
     }
-    .first_name_phone{
+
+    .first_name_phone {
         width: 290px;
         padding-right: 123px;
 
     }
-    .flex_container h5{
+
+    .flex_container h5 {
         font-size: 15px;
         line-height: 21px;
     }
 
+    .media div {
+        width: 100%;
+        max-width: 290px;
+    }
 
-
-
+    .first_name_phone_2 {
+        max-width: 290px;
+    }
 }
 
 
