--- a/css/media.css
+++ b/css/media.css
@@ -18,6 +18,12 @@
     .container{
         max-width: 930px;
     }
+    .container_2{
+        max-width: 932px;
+    }
+    .container_3{
+        max-width: 945px;
+    }
     header{
         padding-top: 37px;
     }
@@ -283,6 +289,7 @@
         max-width: 370px;
         font-size: 16px;
         line-height: 22px;
+        padding: 22px 160px 22px 27px;
     }
     .contact p{
         font-size: 20px;
@@ -314,6 +321,31 @@
         font-size: 16px;
         line-height: 22px;
     }
+    div.ui-dialog.ui-corner-all.ui-widget{
+        width: 510px!important;
+    }
+    .first_name_phone_3{
+        padding: 18px 196px 20px 21px;
+        font-size: 16px;
+        line-height: 22px;
+        max-width: 370px;
+    }
+    #ui-id-1{
+        font-size: 34px;
+        line-height: 37px;
+    }
+    .ui-dialog .ui-dialog-content{
+        padding-right: 61px;
+        padding-bottom: 34px;
+        padding-left: 32px;
+    }
+    .ui-dialog .ui-dialog-titlebar{
+        padding: 28px 33px 22px;
+    }
+    .checkbox_label_3{
+        margin-bottom: 30px;
+    }
+
 
 
 
@@ -325,12 +357,21 @@
     .container {
         max-width: 690px;
     }
+    .container_2{
+        max-width: 690px;
+    }
+    .container_3{
+        max-width: 705px;
+    }
     header li span{
         display: none;
     }
     header ul{
         flex-wrap: wrap;
         flex-direction: column;
+    }
+    header ul li{
+        margin-bottom: 10px;
     }
     header p{
         font-size: 14px;
@@ -491,6 +532,14 @@
     .first_name_phone_2 {
         padding: 18px 196px 20px 21px;
     }
+    .first_name_phone_3{
+        padding: 18px 276px 20px 21px;
+        max-width: 450px;
+    }
+    .ui-button .ui-icon{
+        top: 50%;
+        left: 50%;
+    }
 
 }
 
@@ -499,6 +548,12 @@
 @media only screen and (max-width: 576px) {
     .container{
         max-width: 510px;
+    }
+    .container_2{
+        max-width: 518px;
+    }
+    .container_3{
+        max-width: 533px;
     }
     header p{
         font-size: 12px;
@@ -633,15 +688,46 @@
     .nav__list-item {
         font-size: 35px;
     }
+    .ui-dialog .ui-dialog-titlebar-close{
+        right: -10px;
+        top: -30px;
+    }
 
 
 
 
 }
 
+
+@media only screen and (max-width: 575px) {
+    div.ui-dialog.ui-corner-all.ui-widget{
+        width: 321px!important;
+    }
+    .first_name_phone_3{
+        max-width: 388px;
+        padding: 21px 40px 18px 20px;
+        font-size: 15px;
+        line-height: 21px;
+    }
+    #ui-id-1{
+        font-size: 20px;
+        line-height: 25px;
+    }
+    .ui-dialog .ui-dialog-content{
+        padding-right: 40px;
+    }
+
+}
+
 @media only screen and (max-width: 360px) {
     .container {
         max-width: 290px;
+    }
+    .container_2{
+        max-width: 290px;
+    }
+    .container_3{
+        max-width: 320px;
     }
     header p{
         line-height: 13px;
@@ -685,6 +771,13 @@
     .first_name_phone_2 {
         max-width: 290px;
     }
+    div.ui-dialog.ui-corner-all.ui-widget{
+        width: 321px!important;
+    }
+    .first_name_phone_2{
+        padding: 21px 123px 18px 21px;
+    }
+
 }
 
 
