add hover, media

--- a/css/media.css
+++ b/css/media.css
@@ -527,12 +527,12 @@
         padding: 18px 196px 20px 21px;
     }
     .first_name_phone_3{
-        padding: 18px 276px 20px 21px;
+        padding: 18px 250px 20px 21px;
         max-width: 450px;
     }
     .ui-button .ui-icon{
-        top: 50%;
-        left: 65%;
+        top: 70%;
+        left: 30%;
     }
 
 }
@@ -676,6 +676,10 @@
     .ui-dialog .ui-dialog-titlebar-close{
         right: -10px;
         top: -30px;
+    }
+    .ui-button .ui-icon{
+        top: 60%;
+        left: 70%;
     }
 
 
